Claude Cowork Iteration - Code clean up and version 1.1 release